# python

./: .env.local.example  .gitignore  CLAUDE.md  LICENSE  LICENSE.md  NOTICE  README.md  package.json  pyproject.toml  sentry.client.config.ts  tsconfig.json  vitest.config.ts
.claude/: session-handoff-terminal-a.md  session-handoff.md
.claude/hooks/: preserve-context.sh
.github/ISSUE_TEMPLATE/: docs-issue.yml
.github/workflows/: mutation.yml
.wolf/: anatomy.md  buglog.json  cerebrum.md  memory.md
.wolf/hooks/: _session.json
admin/: next.config.ts  package.json  sentry.edge.config.ts
admin/src/: instrumentation-client.ts  proxy.ts
app/: package.json  stryker.sigv4.conf.mjs  stryker.v1.conf.mjs  tsconfig.stryker.sigv4.json  tsconfig.stryker.v1.json
app/public/: openapi.yaml
app/sandbox-scripts/: README.md  package.json  probe-runner.mjs
app/src/: proxy.ts
app/tests/: invitation-dispatch.test.ts
docs/: FEATURE-INVENTORY.md  ROADMAP-phase2.md  STATUS.md  V2-BACKLOG.md  WHITEPAPER-AUDIT.md
docs/ADRs/: ADR-0001-project-scaffolding.md  ADR-0002-worker-hmac-origin.md  ADR-0003-consent-banner-dashboard.md  ADR-0004-rights-request-workflow.md  ADR-0005-tracker-monitoring.md  ADR-0006-razorpay-billing.md  ADR-0007-deletion-orchestration.md  ADR-0008-browser-auth-hardening.md  ADR-0010-distributed-rate-limiter.md  ADR-0012-automated-test-suites.md  ADR-0013-signup-bootstrap-hardening.md  ADR-0014-external-service-activation.md  ADR-0018-prebuilt-deletion-connectors.md  ADR-0019-depa-roadmap.md  ADR-0020-depa-schema-skeleton.md  ADR-0025-depa-score.md  (+43 more)
marketing/: .env.example  .gitignore  next.config.ts  package.json
scripts/: bootstrap-admin.ts  capture-sigv4-vectors.ts  check-env-isolation.ts  check-no-service-role-in-customer-app.ts  e2e-bootstrap.ts  e2e-reset.ts  e2e-verify-controls.ts  mint-role-jwt.ts  run-mutation-suite.ts  smoke-test-rate-limit.ts  verify-adr-1025-sprint-11.ts
session-context/: context-2026-04-14-19-20-20.md  context-2026-04-15-22-02-12.md  context-2026-04-16-07-01-59.md  context-2026-04-16-12-08-11.md
src/: proxy.ts
supabase/: config.toml
test-sites/: package.json  robots.txt  server.js
tests/: test_errors.py  test_fail_open_callback.py  test_http.py  test_iterators_and_validators.py  test_verify.py  test_verify_batch.py
(+649 files in other folders)
