[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "consentshield"
version = "1.0.0"
description = "Official Python client for the ConsentShield DPDP compliance API. Fail-closed by default; 2-second request timeout; trace-id correlated."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.md" }
authors = [
    { name = "Sudhindra Anegondhi", email = "a.d.sudhindra@gmail.com" },
]
keywords = [
    "consentshield",
    "dpdp",
    "consent",
    "compliance",
    "india",
    "data-privacy",
    "audit",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.27,<1.0",
    "typing-extensions>=4.0; python_version < '3.10'",
]

[project.urls]
Homepage = "https://consentshield.in/docs"
Repository = "https://github.com/aiSpirit-systems/consentshield"
Issues = "https://github.com/aiSpirit-systems/consentshield/issues"

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "pytest-httpx>=0.30",
    "respx>=0.21",
    "pytest-cov>=5.0",
]
dev = [
    "consentshield[test]",
    "mypy>=1.11",
    "ruff>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/consentshield"]

[tool.hatch.build.targets.sdist]
include = ["src/consentshield", "tests", "README.md", "LICENSE.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["src/consentshield"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true

[tool.ruff]
target-version = "py39"
line-length = 100
